fix link title spacing

--- a/css/index-combined-navigation-autoplay-pause-btn-contstant.css
+++ b/css/index-combined-navigation-autoplay-pause-btn-contstant.css
@@ -768,7 +768,7 @@ body {
   .link-container {
     margin-top: 50svh; /* Starts directly below the image */
     height: auto;
-    padding-top: 1svh;
+    padding-top: 0;
   }
 
   .edit-caption-popup {
